--- a/FluentScheduler.TestApplication/FluentScheduler.TestApplication.csproj
+++ b/FluentScheduler.TestApplication/FluentScheduler.TestApplication.csproj
@@ -13,6 +13,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\signature.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
